--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
 
         th, td {
             padding: 12px;
-            text-align: center;
+            text-align: center;s
             border-bottom: 1px solid #ddd;
         }
 
